[gd_scene load_steps=9 format=3 uid="uid://dvncjkf8rmjb0"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_jsfqw"]
[ext_resource type="Texture2D" uid="uid://d2tvmhveubvs1" path="res://graphics/player/player.png" id="1_th2fi"]
[ext_resource type="Texture2D" uid="uid://bio8itcjlluit" path="res://graphics/items/orb2.png" id="3_gimeq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mabfw"]
radius = 61.0328

[sub_resource type="Gradient" id="Gradient_x1lse"]
colors = PackedColorArray(0.984314, 0.490196, 0, 1, 0.760784, 0.0784314, 0, 0.788235)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_c76le"]
gradient = SubResource("Gradient_x1lse")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_402e1"]
particle_flag_disable_z = true
spread = 15.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 400.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.1
scale_max = 0.5
color_ramp = SubResource("GradientTexture1D_c76le")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_okowx"]
polygon = PackedVector2Array(61, -23, 70, -14, 74, -12, 81, -13, 86, -11, 96, -6, 103, -5, 106, -3, 110, 0, 118, 0, 120, 3, 118, 6, 120, 7, 124, 4, 127, 7, 130, 13, 130, 19, 129, 24, 127, 30, 123, 32, 120, 30, 116, 29, 118, 32, 118, 34, 115, 35, 108, 35, 105, 33, 103, 37, 99, 40, 95, 42, 93, 42, 92, 48, 90, 51, 81, 51, 69, 51, 64, 51, 61, 51, 57, 50, 55, 46, 57, 42, 61, 40, 55, 39, 48, 39, 42, 39, 38, 39, 36, 40, 31, 43, 25, 44, 18, 47, 10, 52, -4, 57, -9, 57, -15, 59, -22, 58, -28, 58, -35, 55, -39, 53, -40, 49, -41, 42, -44, 38, -46, 34, -49, 31, -53, 28, -55, 24, -57, 21, -55, 17, -56, 13, -61, 8, -63, 5, -64, -3, -62, -7, -64, -13, -64, -20, -58, -29, -57, -32, -55, -37, -51, -42, -47, -46, -40, -48, -35, -51, -29, -55, -22, -58, -16, -58, -11, -58, -2, -62, 1, -60, 7, -60, 14, -62, 23, -61, 27, -55, 31, -49, 35, -46, 38, -43, 40, -39, 43, -33, 45, -29, 52, -29, 57, -27)

[node name="Player" type="CharacterBody2D" groups=["Entity"]]
collision_mask = 31
script = ExtResource("1_jsfqw")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(33, -1)
rotation = 1.5708
texture = ExtResource("1_th2fi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mabfw")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="GrenadeReloadTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(125, 18)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(125, 10)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(125, 27)

[node name="WeaponFlame" type="GPUParticles2D" parent="."]
position = Vector2(119, 17)
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_402e1")
texture = ExtResource("3_gimeq")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_okowx")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeReloadTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeReloadTimer" to="." method="_on_timer_2_timeout"]
